--- a/cod-sursa/backend/src/main/resources/application.yml
+++ b/cod-sursa/backend/src/main/resources/application.yml
@@ -8,3 +8,14 @@ spring:
   jpa:
     properties:
       hibernate.default_schema: ge
+    open-in-view: false
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/ge
+server:
+  port: 8081
+logging:
+  level:
+    org.springframework.security: trace
