--- a/cod-sursa/frontend/package.json
+++ b/cod-sursa/frontend/package.json
@@ -23,6 +23,8 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "keycloak-angular": "^14.1.0",
+    "keycloak-js": "^22.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
