--- a/cod-sursa/frontend/package.json
+++ b/cod-sursa/frontend/package.json
@@ -24,8 +24,11 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.10",
     "keycloak-angular": "^14.1.0",
     "keycloak-js": "^22.0.5",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
