Reparare bug la avazare maritima fara marfa. UserController pentru returnare username

--- a/cod-sursa/backend/src/main/resources/application.yml
+++ b/cod-sursa/backend/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
   jpa:
     properties:
       hibernate.default_schema: ge
+      hibernate.format_sql: true
     open-in-view: false
   security:
     oauth2:
@@ -19,3 +20,5 @@ server:
 logging:
   level:
     org.springframework.security: warn
+    org.hibernate.SQL: debug
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
