Lucru la adaugare buletin de pilotaj

--- a/cod-sursa/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/cod-sursa/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,7 @@ databaseChangeLog:
       file: db/changelog/changelog-2024-01-07-02.sql
   - include:
       file: db/changelog/changelog-2024-01-11-00.sql
+  - include:
+      file: db/changelog/changelog-2024-03-23-00.sql
+  - include:
+      file: db/changelog/changelog-2024-03-23-01.sql
